correction mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -126,6 +126,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.clear {
+  clear: both;
+}
 body {
   font-family: 'Source Sans Pro', Helvetica, Arial;
   font-weight: 200;
@@ -290,6 +293,7 @@ ul.description li:before {
 ul.skills {
   padding-left: 0px!important;
   margin-left: 5px;
+  margin-top: 5px;
 }
 ul.skills li {
   font-size: 0.7em;
@@ -304,6 +308,8 @@ ul.skills li {
   display: inline;
   list-style-type: none;
   margin-right: 5px;
+  float: left;
+  line-height: 16px;
 }
 .header {
   min-height: 80px;
