--- a/public/css/style.less
+++ b/public/css/style.less
@@ -180,6 +180,7 @@ ul.description{
 ul.skills{
   padding-left: 0px!important;
   margin-left: 5px;
+  margin-top: 5px;
   li{
     font-size: 0.7em;
     background-color: @skill-blue;
@@ -193,5 +194,7 @@ ul.skills{
     display: inline;
     list-style-type: none;
     margin-right: 5px;
+    float: left;
+    line-height: 16px;
   }
 }
